clusters/managed/multimedia/pterodactyl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app pterodactyl
  namespace: mgd-multimedia
  labels:
    milano.app: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      milano.app: *app
  template:
    metadata:
      labels:
        milano.app: *app
    spec:
      containers:
        - name: *app
          image: ghcr.io/pterodactyl/panel:latest
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: data
              mountPath: /app/var/
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pterodactyl-data
