clusters/managed/multimedia/pterodactyl/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app pterodactyl-db
  namespace: mgd-multimedia
  labels:
    milano.app: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      milano.app: *app
  template:
    metadata:
      labels:
        milano.app: *app
    spec:
      containers:
        - name: *app
          image: mariadb:10.5
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pterodactyl-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl-db
  namespace: mgd-multimedia
  labels:
    milano.app: *app
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    milano.app: *app
