clusters/managed/multimedia/pterodactyl/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app pterodactyl-redis
  namespace: mgd-multimedia
  labels:
    milano.app: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      milano.app: *app
  template:
    metadata:
      labels:
        milano.app: *app
    spec:
      containers:
        - name: *app
          image: redis:alpine
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl-redis
  namespace: mgd-multimedia
  labels:
    milano.app: *app
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    milano.app: *app
