clusters/managed/multimedia/pterodactyl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl
  namespace: mgd-multimedia
  labels:
    milano.app: *app
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    milano.app: *app
---
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl-lb
  namespace: mgd-multimedia
  labels:
    milano.app: pterodactyl
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 31217
  selector:
    milano.app: pterodactyl
